Intento de ensamble

--- a/TP2/Auctions Ventana 1.ipynb
+++ b/TP2/Auctions Ventana 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn import metrics\n",
     "%matplotlib inline\n",
     "\n",
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +514,7 @@
        "[318325 rows x 12 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +742,7 @@
        "[324622 rows x 12 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +970,7 @@
        "[325310 rows x 12 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1198,7 @@
        "[968257 rows x 12 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1455,7 @@
        "[436420 rows x 11 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1494,9 +1495,21 @@
        "      <th>time_first_ocurrence_since_window_start</th>\n",
        "      <th>ref_type_id</th>\n",
        "      <th>source_id</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>...</th>\n",
+       "      <th>weekend</th>\n",
+       "      <th>easter_holiday</th>\n",
+       "      <th>days_elapsed_since_window_start</th>\n",
+       "      <th>auction_number_since_window_start</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ref_hash</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1508,11 +1521,23 @@
        "      <td>0.015206</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6854070487213255676</th>\n",
        "      <td>0.016556</td>\n",
        "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1520,11 +1545,23 @@
        "      <td>0.019373</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8598596355049388965</th>\n",
        "      <td>0.043372</td>\n",
        "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1532,9 +1569,21 @@
        "      <td>0.044957</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1544,34 +1593,64 @@
        "      <td>259188.777881</td>\n",
        "      <td>7</td>\n",
        "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>15836054</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3446833012758351091</th>\n",
        "      <td>259188.916098</td>\n",
        "      <td>7</td>\n",
        "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>15836062</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5261424054779144196</th>\n",
        "      <td>259190.436946</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>23</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>15836185</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3687337659831261984</th>\n",
        "      <td>259195.251556</td>\n",
        "      <td>7</td>\n",
        "      <td>7</td>\n",
+       "      <td>23</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>15836539</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7003426950944929579</th>\n",
        "      <td>259196.066684</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>15836599</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>329779 rows × 3 columns</p>\n",
+       "<p>329779 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1589,36 +1668,64 @@
        "3687337659831261984                            259195.251556            7   \n",
        "7003426950944929579                            259196.066684            1   \n",
        "\n",
-       "                     source_id  \n",
-       "ref_hash                        \n",
-       "4962177571260097630          1  \n",
-       "6854070487213255676          1  \n",
-       "6028134205740110035          1  \n",
-       "8598596355049388965          3  \n",
-       "5420144902280053407          1  \n",
-       "...                        ...  \n",
-       "1716969332272710057          0  \n",
-       "3446833012758351091          1  \n",
-       "5261424054779144196          2  \n",
-       "3687337659831261984          7  \n",
-       "7003426950944929579          1  \n",
+       "                     source_id  hour  ...  weekend  easter_holiday  \\\n",
+       "ref_hash                              ...                            \n",
+       "4962177571260097630          1     0  ...        0               0   \n",
+       "6854070487213255676          1     0  ...        0               0   \n",
+       "6028134205740110035          1     0  ...        0               0   \n",
+       "8598596355049388965          3     0  ...        0               0   \n",
+       "5420144902280053407          1     0  ...        0               0   \n",
+       "...                        ...   ...  ...      ...             ...   \n",
+       "1716969332272710057          0    23  ...        0               0   \n",
+       "3446833012758351091          1    23  ...        0               0   \n",
+       "5261424054779144196          2    23  ...        0               0   \n",
+       "3687337659831261984          7    23  ...        0               0   \n",
+       "7003426950944929579          1    23  ...        0               0   \n",
        "\n",
-       "[329779 rows x 3 columns]"
+       "                     days_elapsed_since_window_start  \\\n",
+       "ref_hash                                               \n",
+       "4962177571260097630                              0.0   \n",
+       "6854070487213255676                              0.0   \n",
+       "6028134205740110035                              0.0   \n",
+       "8598596355049388965                              0.0   \n",
+       "5420144902280053407                              0.0   \n",
+       "...                                              ...   \n",
+       "1716969332272710057                              2.0   \n",
+       "3446833012758351091                              2.0   \n",
+       "5261424054779144196                              2.0   \n",
+       "3687337659831261984                              2.0   \n",
+       "7003426950944929579                              2.0   \n",
+       "\n",
+       "                     auction_number_since_window_start  \n",
+       "ref_hash                                                \n",
+       "4962177571260097630                                  0  \n",
+       "6854070487213255676                                  1  \n",
+       "6028134205740110035                                  2  \n",
+       "8598596355049388965                                  3  \n",
+       "5420144902280053407                                  4  \n",
+       "...                                                ...  \n",
+       "1716969332272710057                           15836054  \n",
+       "3446833012758351091                           15836062  \n",
+       "5261424054779144196                           15836185  \n",
+       "3687337659831261984                           15836539  \n",
+       "7003426950944929579                           15836599  \n",
+       "\n",
+       "[329779 rows x 11 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "auctions_test_window = calculate_labels('data/auctions_ventanas/auctions_2019-04-24-2019-04-26.csv', '2019-04-24 00:00:00')\n",
+    "auctions_test_window = process_time_window('data/auctions_ventanas/auctions_2019-04-24-2019-04-26.csv', '2019-04-24 00:00:00')\n",
     "auctions_test_window"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1744,7 +1851,7 @@
        "[436420 rows x 2 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1759,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1770,7 +1877,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1781,17 +1888,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "features = auctions\n",
     "labels = merged['time_first_ocurrence_since_window_start_y']\n",
     "X_train, X_test, y_train, y_test = \\\n",
-    "    train_test_split(features, labels, test_size=0.7, random_state=123)\n",
-    "regressor = LinearRegression()\n",
-    "regressor.fit(X_train, y_train)\n",
-    "y_pred = regressor.predict(X_test)"
+    "    train_test_split(features, labels, test_size=0.7, random_state=123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lin_reg = LinearRegression()\n",
+    "lin_reg.fit(X_train, y_train)\n",
+    "y_pred_lin = lin_reg.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'max_features': 8, 'n_estimators': 30}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "param_grid = [{'n_estimators': [3, 10, 30], 'max_features': [2, 4, 6, 8]},\n",
+    "              {'bootstrap': [False], 'n_estimators': [3, 10], 'max_features': [2, 3, 4]},\n",
+    "]\n",
+    "forest_reg = RandomForestRegressor()\n",
+    "grid_search = GridSearchCV(forest_reg, param_grid, cv=5, scoring='neg_mean_squared_error')\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "grid_search.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forest_reg = RandomForestRegressor(n_estimators = 30, max_features = 8)\n",
+    "forest_reg.fit(X_train, y_train)\n",
+    "y_pred_forest = forest_reg.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/horacio/.local/lib/python3.5/site-packages/xgboost/core.py:587: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
+      "  if getattr(data, 'base', None) is not None and \\\n"
+     ]
+    }
+   ],
+   "source": [
+    "import xgboost as xgb\n",
+    "xgb_reg = xgb.XGBRegressor(objective ='reg:squarederror', \n",
+    "                colsample_bytree = 0.3, learning_rate = 0.1,\n",
+    "                max_depth = 5, alpha = 10, n_estimators = 10)\n",
+    "xgb_reg.fit(X_train,y_train)\n",
+    "y_pred_xgb = xgb_reg.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#y_pred = (y_pred_lin + y_pred_forest) / 2\n",
+    "y_pred = y_pred_lin"
    ]
   },
   {
@@ -1955,16 +2141,14 @@
      "text": [
       "Mean Absolute Error: 94283.58693630219\n",
       "Mean Squared Error: 10570194570.178242\n",
-      "Root Mean Squared Error: 102811.45155175196\n",
-      "R2 Score: 0.05307451133690866\n"
+      "Root Mean Squared Error: 102811.45155175196\n"
      ]
     }
    ],
    "source": [
     "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, y_pred))\n",
     "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_pred))\n",
-    "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y_test, y_pred)))\n",
-    "print('R2 Score:', metrics.r2_score(y_test, y_pred))"
+    "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y_test, y_pred)))"
    ]
   },
   {
